--- a/uniasselvi.html
+++ b/uniasselvi.html
@@ -25,7 +25,7 @@
             </form>
         </div>
         <div id="botoes">
-            <input type="submit" value="Pesquisa Alunos">
+            <input type="submit" value="Pesquisar Alunos">
             <input type="submit" value="Estou com sorte">
             </div>
     <footer>
