--- a/uniasselvi.html
+++ b/uniasselvi.html
@@ -31,7 +31,7 @@
     <footer>
         <ul id="footer_esquerdo">
             <li><a href="#">Publicidade</a></li>
-            <li><a href="#">Negócios</a></li>
+            <li><a href="#">Negocios</a></li>
             <li><a href="#">Sobre</a></li>
             <li><a href="#">Como Funciona a pesquisa</a></li>
         </ul>
