--- a/uniasselvi.html
+++ b/uniasselvi.html
@@ -21,7 +21,7 @@
         </div>
         <div id="form">
             <form>
-                <input class="botão_preto" id="barra_de_pesquisa" type="text">
+                <input class="bot?o_preto" id="barra_de_pesquisa" type="text">
             </form>
         </div>
         <div id="botoes">
@@ -31,7 +31,7 @@
     <footer>
         <ul id="footer_esquerdo">
             <li><a href="#">Publicidade</a></li>
-            <li><a href="#">Negocios</a></li>
+            <li><a href="#">Negócios</a></li>
             <li><a href="#">Sobre</a></li>
             <li><a href="#">Como Funciona a pesquisa</a></li>
         </ul>
