--- a/uniasselvi.html
+++ b/uniasselvi.html
@@ -21,7 +21,7 @@
         </div>
         <div id="form">
             <form>
-                <input class="bot?o_preto" id="barra_de_pesquisa" type="text">
+                <input class="botï¿½o_preto" id="barra_de_pesquisa" type="text">
             </form>
         </div>
         <div id="botoes">
@@ -31,14 +31,14 @@
     <footer>
         <ul id="footer_esquerdo">
             <li><a href="#">Publicidade</a></li>
-            <li><a href="#">Negócios</a></li>
+            <li><a href="#">NegÃ³cios</a></li>
             <li><a href="#">Sobre</a></li>
             <li><a href="#">Como Funciona a pesquisa</a></li>
         </ul>
         <ul id="footer_direito">
             <li><a href="#">Privacidade</a></li>
             <li><a href="#">Termos</a></li>
-            <li><a href="#">Configuração</a></li>
+            <li><a href="#">ConfiguraÃ§Ã£o</a></li>
             <li><a href="#">Brasil</a></li>
         </ul>
     </footer>
